Heroku branch (#20)
use heroku gradle plugin, put migrations in own migration app